# rust-practice

./: field_transformer.py  test.py  test2.py
pyo3_tests/: Cargo.toml
pyo3_tests/src/: exp3.rs  exp4.rs  exp5.rs  main.rs  print_pyo3_config.sh  pyo3_config.cfg  set_pyo3_config_file.sh  set_pyo3_python.sh
rustpython_tests/: Cargo.toml
rustpython_tests/src/: class_a.py  class_b.py
