[package]
name = "pyo3_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.pyo3]
version = "0.15.1"
features = ["auto-initialize"]

[[example]]
name = "exp1"
path = "src/exp1.rs"

[[example]]
name = "exp2"
path = "src/exp2.rs"

[[example]]
name = "exp3"
path = "src/exp3.rs"

[[example]]
name = "exp5"
path = "src/exp5.rs"